// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatientPage Tests PatientPage renders correctly when types are available 1`] = `
<Row>
  <Col
    offset={6}
    span={12}
  >
    <h2>
      Patients
    </h2>
    <PatientBlock
      key="a_level"
      title="a level"
      type="a_level"
    />
    <PatientBlock
      key="b_level"
      title="b level"
      type="b_level"
    />
  </Col>
</Row>
`;

exports[`PatientPage Tests PatientPage renders correctly when types are not available 1`] = `
<Row>
  <Col
    offset={6}
    span={12}
  >
    <h2>
      Patients
    </h2>
  </Col>
</Row>
`;
